# NIC-image-deployment-tool

./: README.md  main.py  pyproject.toml
.github/workflows/: python-ci.yml
src/nvme_imager/: browser.py  cli.py  config.py  disk.py  imaging.py  logger.py  size_utils.py
tests/: test_browser.py  test_imaging.py  test_size_utils.py
